--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,9 +27,8 @@
             android:layout_height="50dp"
             android:ems="10"
             android:textSize="20sp"
+            android:textColor="@color/kolaloka"
             android:layout_gravity="center"
-            android:textColor="@color/negro"
-            android:textColorHint="@color/azulCielo"
             android:singleLine="true"
             android:inputType="textVisiblePassword"/>
     </com.google.android.material.textfield.TextInputLayout>
@@ -38,34 +37,20 @@
         android:id="@+id/main_element2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:passwordToggleEnabled="true"
-        android:textColorHint="@color/azulCielo"
-        android:layout_below="@id/main_element1">
-
+        android:layout_below="@id/main_element1"
+        app:passwordToggleTint="@color/kolaloka"
+        app:passwordToggleEnabled="true">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/main_loginPassword"
             android:layout_width="250dp"
             android:layout_height="50dp"
             android:ems="10"
             android:textSize="20sp"
+            android:textColor="@color/kolaloka"
             android:layout_gravity="center"
-            android:textColor="@color/negro"
-            android:textColorHint="@color/azulCielo"
             android:singleLine="true"
             android:inputType="textPassword"/>
     </com.google.android.material.textfield.TextInputLayout>
-
-    <TextView
-        android:id="@+id/main_forgotPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Olvidé mi contraseña"
-        android:gravity="center_horizontal"
-        android:textSize="25sp"
-        android:paddingTop="25dp"
-        android:textStyle="bold"
-        android:textColor="@color/negro"
-        android:layout_below="@id/main_element2"/>
 
     <Button
         android:id="@+id/main_btnAcceder"
@@ -73,12 +58,36 @@
         android:layout_height="wrap_content"
         android:text=" Acceder "
         android:textAllCaps="false"
-        android:textColor="@color/negro"
+        android:textColor="@color/txt_pressed_style"
         android:textSize="30sp"
         android:layout_marginTop="40dp"
         android:background="@drawable/btn_style"
         android:layout_centerHorizontal="true"
         android:elevation="5dp"
-        android:layout_below="@id/main_forgotPassword"/>
+        android:layout_below="@id/main_element2"/>
 
+    <TextView
+        android:id="@+id/main_newuser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/main_btnAcceder"
+        android:layout_marginTop="40dp"
+        android:layout_centerHorizontal="true"
+        android:gravity="center_horizontal"
+        android:text="Nuevo usuario"
+        android:textColor="@color/txt_pressed_style"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/main_forgotPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:gravity="center_horizontal"
+        android:text="Olvidé mi contraseña"
+        android:textColor="@color/txt_pressed_style"
+        android:textSize="20sp" />
 </RelativeLayout>
