--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,5 +21,5 @@
     <color name="lila_claro">#E0BAE0</color>
     <color name="azulCSuave">#C9FAEB</color>
     <color name="ama_suave">#FDFD9B</color>
-
+    <color name="grisClaro">#B1BFBB</color>
 </resources>
