agregarEmail: OK; refreshListaEmails:OK

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,6 @@
     <color name="azulCSuave">#C9FAEB</color>
     <color name="ama_suave">#FDFD9B</color>
     <color name="grisClaro">#B1BFBB</color>
+    <color name="naranja">#FEAE0E</color>
+    <color name="mamey">#FF5733</color>
 </resources>
