--- a/app/src/main/res/layout/updt_pss_usuario.xml
+++ b/app/src/main/res/layout/updt_pss_usuario.xml
@@ -107,10 +107,10 @@
         android:layout_height="wrap_content"
         android:text=" Actualizar "
         android:textAllCaps="false"
-        android:textColor="@color/txt_pressed_style"
+        android:textColor="@color/txt_pressed_style_dk"
         android:textSize="30sp"
         android:layout_marginTop="50dp"
-        android:background="@drawable/btn_style"
+        android:background="@drawable/btn_style_dk"
         android:layout_centerHorizontal="true"
         android:elevation="5dp"
         android:layout_below="@id/usr_updt_element4"/>
