--- a/app/src/main/res/menu/opc_email.xml
+++ b/app/src/main/res/menu/opc_email.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/menu_cuentas"
+        android:title="Ver cuentas"
+        android:icon="@drawable/baseline_folder_shared_black_18dp"/>
+    <item
         android:id="@+id/menu_editmail"
         android:title="Editar email"
         android:icon="@drawable/baseline_edit_black_18dp"/>
-    <item
-        android:id="@+id/menu_addcuenta"
-        android:title="Agregar cuenta"
-        android:icon="@drawable/baseline_create_new_folder_black_18dp"/>
     <item
         android:id="@+id/menu_delemail"
         android:title="Eliminar email"
