--- a/app/src/main/res/layout/datos_adapter_cuenta.xml
+++ b/app/src/main/res/layout/datos_adapter_cuenta.xml
@@ -67,13 +67,13 @@
             android:src="@drawable/baseline_folder_shared_black_18dp"/>
         <TextView
             android:id="@+id/adapter_tipo"
-            android:background="@drawable/btn_user_style"
+            android:background="@color/lila_claro"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="tipo"
             android:textSize="20sp"
             android:layout_marginStart="10dp"
-            android:textColor="@color/negro"
+            android:textColor="@color/azulRey"
             android:layout_marginTop="3dp"
             android:focusable="false"
             android:focusableInTouchMode="false"/>
