--- a/app/src/main/res/layout/show_accounts.xml
+++ b/app/src/main/res/layout/show_accounts.xml
@@ -4,11 +4,19 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="10dp">
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/account_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/azulCSuave"
+        app:title="Cuentas"
+        app:titleTextColor="@color/negro"/>
     <ImageView
         android:id="@+id/imgNoAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/noaccount"
+        android:layout_below="@id/account_toolbar"
         android:layout_centerHorizontal="true"/>
     <TextView
         android:id="@+id/txtNoAccount"
@@ -23,7 +31,8 @@
     <ListView
         android:id="@+id/accounts_lista"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_below="@id/account_toolbar"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/account_add"
