--- a/app/src/main/res/layout/add_account.xml
+++ b/app/src/main/res/layout/add_account.xml
@@ -18,6 +18,7 @@
             android:ems="10"
             android:hint="Usuario ó email"
             android:textSize="20sp"
+            android:enabled="false"
             android:textColor="@color/negro"
             android:layout_gravity="center"
             android:singleLine="true"
