--- a/app/src/main/res/layout/show_emails.xml
+++ b/app/src/main/res/layout/show_emails.xml
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="10dp">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/emails_refresh"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true">
+        <ListView
+            android:id="@+id/emails_lista"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"/>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     <!--ToggleButton
         android:id="@+id/emails_verpss_toggle"
         android:layout_width="30dp"
@@ -12,20 +23,12 @@
         android:background="@drawable/toggle_psswrd_style"
         android:textOff=""
         android:textOn=""/-->
-
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/emails_search"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textNoSuggestions"
-        android:background="@color/mamey">
-        <requestFocus/>
-    </androidx.appcompat.widget.SearchView>
     <ImageView
         android:id="@+id/imgNoEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/noemail"
+        android:padding="10dp"
         android:layout_centerHorizontal="true"/>
     <TextView
         android:id="@+id/textNoEmail"
@@ -36,13 +39,8 @@
         android:layout_below="@id/imgNoEmail"
         android:textSize="25sp"
         android:gravity="center"
+        android:padding="10dp"
         android:layout_marginBottom="20dp"/>
-
-    <ListView
-        android:id="@+id/emails_lista"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/emails_search"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/emails_add"
@@ -52,17 +50,8 @@
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="25dp"
         android:layout_marginEnd="30dp"
+        android:padding="10dp"
         app:elevation="5dp"
         app:backgroundTint="@color/azulCielo"
         app:srcCompat="@drawable/addmail"/>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/emails_refresh"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/emails_add"
-        android:layout_marginStart="20dp"
-        app:elevation="5dp"
-        app:backgroundTint="@color/naranja"
-        app:srcCompat="@drawable/baseline_refresh_black_18dp"/>
 </RelativeLayout>
