--- a/app/src/main/res/layout/add_usuario.xml
+++ b/app/src/main/res/layout/add_usuario.xml
@@ -37,7 +37,7 @@
             android:textColor="@color/blanco"
             android:layout_gravity="center"
             android:singleLine="true"
-            android:inputType="textVisiblePassword"/>
+            android:inputType="text"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -77,7 +77,7 @@
             android:textColor="@color/blanco"
             android:layout_gravity="center"
             android:singleLine="true"
-            android:inputType="textVisiblePassword"/>
+            android:inputType="text"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
