--- a/app/src/main/res/layout/intro_4_funcion_b.xml
+++ b/app/src/main/res/layout/intro_4_funcion_b.xml
@@ -10,7 +10,7 @@
         android:text="@string/funcionb_txt1"
         android:textColor="@color/blanco"
         android:textSize="23sp"
-        android:gravity="start"
+        android:gravity="center"
         android:layout_marginTop="15dp"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"/>
